test/should-fail/vsgc3563.f3
/**
 * Regress test for VSGC-3563: Compiled bind: bind object literal with object literal locals crashes compiler with "wrong"
 *
 * @test/compile-error
 */

class A {
 var x;
}

var a = bind A { var y; }
